<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AMy">



    <android.support.v4.widget.NestedScrollView
        android:id="@+id/net_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_my_head_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_162"
        android:background="@mipmap/my_cover_img"
        />

    <RelativeLayout
        android:id="@+id/rl_head_img"
        android:layout_width="@dimen/dp_44"
        android:layout_height="@dimen/dp_44"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/my_white_redis">

        <ImageView
            android:id="@+id/iv_head_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_2" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_head_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        android:text="angel"
        android:textColor="@color/color_353B50"
        android:textSize="12sp" />


    <RelativeLayout
        android:id="@+id/rl_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="123dp"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/my_back"
        android:elevation="1dp">

        <TextView
            android:id="@+id/tv_my_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_22"
            android:drawableTop="@mipmap/my_like"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/my_like"
            android:textColor="@color/color_777777"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_my_like"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_toRightOf="@id/tv_my_like"
            android:text="2343"
            android:textColor="@color/color_777777"
            android:textSize="10sp" />


        <TextView
            android:id="@+id/tv_my_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawableTop="@mipmap/my_share"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/my_share"
            android:textColor="@color/color_777777"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_my_share"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_toRightOf="@id/tv_my_share"
            android:text="2343"
            android:textColor="@color/color_777777"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_daka_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_my_share"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_22"
            android:text="2343"
            android:textColor="@color/color_777777"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_my_daka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_toLeftOf="@id/tv_daka_number"
            android:drawableTop="@mipmap/my_daka"
            android:drawablePadding="@dimen/dp_6"
            android:text="@string/my_daka"
            android:textColor="@color/color_777777"
            android:textSize="12sp" />
    </RelativeLayout>


    <com.lestin.yin.widget.MineItemView
        android:id="@+id/miv_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_card"
        android:layout_marginTop="@dimen/dp_10"

        app:img="@mipmap/my_qianbao"
        app:name="@string/wallet"
        app:rightName="321" />

    <com.lestin.yin.widget.MineItemView
        android:id="@+id/miv_invite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miv_money"
        app:img="@mipmap/my_yaoqing"
        app:name="@string/invite"
        app:rightName="@string/my_invite_info" />

    <com.lestin.yin.widget.MineItemView
        android:id="@+id/miv_jifen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/miv_invite"
        app:img="@mipmap/my_jifen"
        app:name="@string/zhuanjifen"
        app:rightName="@string/my_zhuanjifen_info" />


    <TextView
        android:id="@+id/tv_my_tools"
        style="@style/tab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/miv_jifen"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/my_tools"
        android:textColor="@color/color_353B50"
        android:textSize="15sp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_my_tools"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_30"
        android:overScrollMode="never"
        />

    <RelativeLayout
        android:id="@+id/rl_apply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_below="@id/rv_my"
        android:background="@drawable/my_apply_bg">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_apply_daren"
                style="@style/tab_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_apply_daren"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv_apply_daren"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_toRightOf="@id/tv_apply_daren"
                android:drawableRight="@mipmap/n_yellow"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/my_apply_small_info"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_apply"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/my_info"
        android:textColor="@color/color_777777"
        android:layout_marginTop="@dimen/dp_12"
        android:textSize="10sp" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <ImageView
        android:id="@+id/iv_my_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@mipmap/my_back"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginRight="@dimen/dp_16"
        android:drawableRight="@mipmap/my_setting"
        android:drawablePadding="@dimen/dp_5"
        android:text="@string/chinese_englist"
        android:textColor="@color/color_353B50"
        android:textSize="12sp" />
</RelativeLayout>